--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,2 @@
-flutter.sdk=C:\\Users\\olive\\OneDrive\\Desktop\\CompSci\\projects\\mine_app\\lib\\models\\flutter
+flutter.sdk=C:\\Users\\olive\\OneDrive\\Desktop\\CompSci\\projects\\flutter
 sdk.dir=C:\\Users\\olive\\AppData\\Local\\Android\\sdk
