--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,6 +1,6 @@
 // This is a generated file; do not edit or check into version control.
-FLUTTER_ROOT=C:\Users\olive\OneDrive\Desktop\CompSci\projects\mine_app\lib\models\flutter
-FLUTTER_APPLICATION_PATH=C:\Users\olive\OneDrive\Desktop\CompSci\projects\mine_app
+FLUTTER_ROOT=C:\Users\olive\OneDrive\Desktop\CompSci\projects\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\olive\OneDrive\Desktop\contractor work\mine_game_app\mine_app
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
