--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,22 +3,44 @@ description: A Minesweeper game built with Flutter.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  # Updated to a more recent Flutter/Dart version range. Adjust as needed.
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: "^1.0.0"
-  firebase_auth: "^1.0.0"
-  cloud_firestore: "^1.0.0"
-  audioplayers: "^0.20.1"
-  # Add other dependencies as needed
-  google_mobile_ads: "^1.0.0"
+
+  # Firebase Core and related plugins (updated versions)
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  cloud_firestore: ^5.5.1
+
+  # Audio and sound effects
+  audioplayers: ^0.20.1
+
+  # State management
+  provider: ^6.0.0
+
+  # Google Mobile Ads
+  google_mobile_ads: ^3.0.0
+
+  # Common plugins you might consider
+  url_launcher: ^6.1.10
+  shared_preferences: ^2.2.0
+
+  # Add other dependencies as required
+  # For example:
+  # http: ^0.13.5
+  # connectivity_plus: ^3.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
+  # Linting package for best practices
+  flutter_lints: ^2.0.0
+
+# Include assets and fonts
 flutter:
   uses-material-design: true
 
