--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,47 +3,53 @@ description: A Minesweeper game built with Flutter.
 version: 1.0.0+1
 
 environment:
-  # Updated to a more recent Flutter/Dart version range. Adjust as needed.
+  # Compatible with Flutter 3.x and Dart 3.x
   sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # Firebase Core and related plugins (updated versions)
-  firebase_core: ^3.8.1
-  firebase_auth: ^5.3.4
-  cloud_firestore: ^5.5.1
+  # Firebase Core and related plugins
 
-  # Audio and sound effects
-  audioplayers: ^0.20.1
+
+  
+
+  # Audio and sound effects (supports v2 embedding)
+  audioplayers: ^6.1.0
 
   # State management
-  provider: ^6.0.0
+  provider: ^6.0.6
 
-  # Google Mobile Ads
-  google_mobile_ads: ^3.0.0
+  # Google Mobile Ads (v2 embedding)
 
-  # Common plugins you might consider
-  url_launcher: ^6.1.10
-  shared_preferences: ^2.2.0
 
-  # Add other dependencies as required
-  # For example:
-  # http: ^0.13.5
-  # connectivity_plus: ^3.0.2
+  # Common plugins
+  url_launcher: ^6.3.1
+  shared_preferences: ^2.3.3
+
+  # Example additional plugins you might want:
+  http: ^1.2.2
+
+  flutter_local_notifications: ^18.0.1
+  google_mobile_ads: ^5.2.0
+  cloud_firestore: ^5.6.0
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.4
+  connectivity_plus: ^6.1.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   # Linting package for best practices
-  flutter_lints: ^2.0.0
+  flutter_lints: ^5.0.0
 
-# Include assets and fonts
 flutter:
   uses-material-design: true
 
+  # Update asset paths if you keep assets in these folders.
+  # Ensure these folders actually exist in your project:
   assets:
-    - assets/images/
-    - assets/fonts/
+    - lib/assets/images/
+    - lib/assets/fonts/
